fixed page overflow on small screens

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body
     display: flex;
     flex-direction: column;
     background: black;
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
     justify-content: center;
     align-items: center;
@@ -40,7 +40,7 @@ body
 {
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 80dvh;
     width: 90vw;
     justify-content: center;
 }
@@ -51,7 +51,7 @@ body
     align-content: center;
     align-items: center;
     justify-content: flex-end;
-    height: 10vh;
+    height: 10dvh;
     width: 90vw;
 }
 
@@ -61,8 +61,8 @@ button
     outline: none;
     border-radius: 50px;
     min-width: 8vw;
-    max-height: 6vh;
-    min-height: 6vh;
+    max-height: 6dvh;
+    min-height: 6dvh;
     margin: 0px 5px;
     font-size: medium;
     padding: 0px 1vw;
@@ -98,7 +98,7 @@ button
 {
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 80dvh;
     width: 90vw;
     justify-content: center;
 }
@@ -122,7 +122,7 @@ p
     justify-content: center;
 
     flex-wrap: nowrap;
-    height: 20vh;
+    height: 20dvh;
     width: 90vw;
 
 }
